# ues-agentbeats

./: .env.example  .gitignore  README.md  TODO.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: Commit Agent.agent.md
docs/: AGENTBEATS_COMPETITION_DESCRIPTION.md  ASSESSMENT_FLOW.md  IMPLEMENTATION_PLAN.md
docs/design/: GREEN_AGENT_DESIGN.md  GREEN_AGENT_DESIGN_PLAN.md  GREEN_EXECUTOR_DESIGN.md  RESPONSE_GENERATION_DESIGN.md  RESPONSE_GENERATION_DESIGN_NOTES.md
scenarios/email_triage_basic/: IMPLEMENTATION_PLAN.md  README.md  __init__.py  _eval_helpers.py  evaluators.py  ground_truth.py  initial_state.json  scenario.json
scripts/: build_email_triage_state.py
src/: __init__.py
src/common/: __init__.py
src/common/a2a/: README.md  __init__.py  agent_card.py  artifacts.py  client.py  messages.py  server.py  tasks.py
src/common/agentbeats/: README.md  __init__.py  config.py  messages.py  results.py  updates.py
src/green/: README.md  __init__.py  action_log.py  agent.py  executor.py  judge.py  llm_config.py  response_generator.py  server.py
src/green/assessment/: __init__.py  models.py
src/green/core/: __init__.py  action_log.py  message_collector.py  ues_server.py
src/green/evaluation/: __init__.py  judge.py  models.py
src/green/prompts/: README.md  __init__.py  evaluation_prompts.py  (+1 more)
tests/green/: __init__.py  test_action_log.py  test_agent.py  test_agent_api_keys.py  test_agent_integration.py  test_agent_purple_comm.py  test_agent_real_ues.py  test_agent_ues_setup.py  test_executor.py  test_judge.py  test_judge_models.py  test_llm_config.py  test_message_collector.py  test_response_generator.py  test_response_generator_integration.py  test_response_models.py  test_response_scheduling.py
(+43 files in other folders)
