[project]
name = "ues-agentbeats"
version = "0.1.0"
description = "Green and Purple agents for the AgentBeats competition using UES"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.22",
    "httpx>=0.28.0",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ues",
    "uvicorn>=0.30",
]

[tool.uv.sources]
ues = { git = "https://github.com/JBoggsy/ues.git" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "ollama: marks tests that require local Ollama server",
    "openai: marks tests that require OpenAI API key",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
